RESOLVED FIXED234124
Fix the tvOS and watchOS builds after r286641
https://bugs.webkit.org/show_bug.cgi?id=234124
Summary Fix the tvOS and watchOS builds after r286641
Aditya Keerthi
Reported 2021-12-09 22:17:51 PST
...
Attachments
[fast-cq] Patch (1.30 KB, patch)
2021-12-09 22:22 PST, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-12-09 22:22:26 PST
Created attachment 446661 [details] [fast-cq] Patch
EWS
Comment 2 2021-12-09 22:25:45 PST
Committed r286833 (245066@main): <https://commits.webkit.org/245066@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 446661 [details].
Radar WebKit Bug Importer
Comment 3 2021-12-09 22:26:22 PST
Note You need to log in before you can comment on or make changes to this bug.