Fix the tvOS and watchOS builds after r286641 https://bugs.webkit.org/show_bug.cgi?id=234124

Unreviewed build fix.


* UIProcess/API/Cocoa/WKWebViewPrivate.h:

WKWebView does not conform to the protocol on watchOS/tvOS.



Canonical link: https://commits.webkit.org/245066@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286833 268f45cc-cd09-0410-ab3c-d52691b4dbfc